lab finished...again

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +525,7 @@
        "59  23.0   OJ   2.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -845,7 +845,7 @@
        "59  23.0   OJ   2.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,13 +896,14 @@
     "    df = welch_df(a,b)\n",
     "    p = 1 - stats.t.cdf(t, df)\n",
     "    if two_sided:\n",
-    "        p += p\n",
-    "    return p\n"
+    "        return 2*p\n",
+    "    else:\n",
+    "        return p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +912,7 @@
        "0.06063450788093383"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1001,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('OJ', 0.5), ('OJ', 1.0)) 1.4866209618880077e-07\n",
+      "(('OJ', 0.5), ('OJ', 2.0)) 3.1072699968603956e-11\n",
+      "(('OJ', 0.5), ('VC', 0.5)) 0.0009894705755875144\n",
+      "(('OJ', 0.5), ('VC', 1.0)) 0.021188235155023882\n",
+      "(('OJ', 0.5), ('VC', 2.0)) 1.5016921040000852e-10\n",
+      "(('OJ', 1.0), ('OJ', 2.0)) 0.014554700356502526\n",
+      "(('OJ', 1.0), ('VC', 0.5)) 3.1086244689504383e-15\n",
+      "(('OJ', 1.0), ('VC', 1.0)) 4.203335666597141e-05\n",
+      "(('OJ', 1.0), ('VC', 2.0)) 0.02710575576515617\n",
+      "(('OJ', 2.0), ('VC', 0.5)) 0.0\n",
+      "(('OJ', 2.0), ('VC', 1.0)) 9.481304630298837e-14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:872: RuntimeWarning: invalid value encountered in greater\n",
+      "  cond = logical_and(cond, (asarray(arg) > 0))\n",
+      "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in greater\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in less\n",
+      "  return (self.a < x) & (x < self.b)\n",
+      "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:1738: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  cond2 = (x >= self.b) & cond0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('OJ', 2.0), ('VC', 2.0)) 0.9477213632803463\n",
+      "(('VC', 0.5), ('VC', 1.0)) 1.7352785874891197e-12\n",
+      "(('VC', 0.5), ('VC', 2.0)) 0.0\n",
+      "(('VC', 1.0), ('VC', 2.0)) 5.418798743050957e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "\n",
+    "# fs.p_value_welch_ttest(oj_lengths, vc_lengths, two_sided=True)\n",
+    "\n",
+    "\n",
+    "groups = [group[0] for group in df.groupby(['supp', 'dose'])['len']]\n",
+    "combos = combinations(groups, 2)\n",
+    "for combo in combos:\n",
+    "    supp1 = combo[0][0]\n",
+    "    dose1 = combo[0][1]\n",
+    "    supp2 = combo[1][0]\n",
+    "    dose2 = combo[1][1]\n",
+    "    sample1 = df[(df.supp == supp1) & (df.dose == dose1)]\n",
+    "    sample2 = df[(df.supp == supp2) & (df.dose == dose2)]\n",
+    "    p = p_value(sample1, sample2, two_sided=True)\n",
+    "    print(combo, p[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1008,53 +1076,144 @@
      "output_type": "stream",
      "text": [
       "OJ dosage: 0.5\n",
+      "OJ dosage: 1.0\n",
+      "p-value:8.784919055160323e-05\n",
+      "\n",
+      "OJ dosage: 0.5\n",
+      "OJ dosage: 2.0\n",
+      "p-value:1.3237838778490385e-06\n",
+      "\n",
+      "OJ dosage: 1.0\n",
+      "OJ dosage: 0.5\n",
+      "p-value:8.784919055160323e-05\n",
+      "\n",
+      "OJ dosage: 1.0\n",
+      "OJ dosage: 2.0\n",
+      "p-value:0.03919514204624397\n",
+      "\n",
+      "OJ dosage: 2.0\n",
+      "OJ dosage: 0.5\n",
+      "p-value:1.3237838778490385e-06\n",
+      "\n",
+      "OJ dosage: 2.0\n",
+      "OJ dosage: 1.0\n",
+      "p-value:0.03919514204624397\n",
+      "\n",
+      "OJ dosage: 0.5\n",
       "VC dosage: 0.5\n",
-      "p-value: 0.00635860676409683 \n",
+      "p-value:0.00635860676409683\n",
       "\n",
       "OJ dosage: 0.5\n",
       "VC dosage: 1.0\n",
-      "p-value: 0.04601033257637566 \n",
+      "p-value:0.04601033257637566\n",
       "\n",
       "OJ dosage: 0.5\n",
       "VC dosage: 2.0\n",
-      "p-value: 7.196253523966689e-06 \n",
+      "p-value:7.196253523966689e-06\n",
       "\n",
       "OJ dosage: 1.0\n",
       "VC dosage: 0.5\n",
-      "p-value: 3.655206715080794e-08 \n",
+      "p-value:3.655206715080794e-08\n",
       "\n",
       "OJ dosage: 1.0\n",
       "VC dosage: 1.0\n",
-      "p-value: 0.0010383758723000458 \n",
+      "p-value:0.0010383758723000458\n",
       "\n",
       "OJ dosage: 1.0\n",
       "VC dosage: 2.0\n",
-      "p-value: 0.09652612338267019 \n",
+      "p-value:0.09652612338267019\n",
       "\n",
       "OJ dosage: 2.0\n",
       "VC dosage: 0.5\n",
-      "p-value: 1.362154833373097e-11 \n",
+      "p-value:1.362154833373097e-11\n",
       "\n",
       "OJ dosage: 2.0\n",
       "VC dosage: 1.0\n",
-      "p-value: 2.3610742005963914e-07 \n",
+      "p-value:2.3610742005963914e-07\n",
       "\n",
       "OJ dosage: 2.0\n",
       "VC dosage: 2.0\n",
-      "p-value: 0.9638515887233756 \n",
+      "p-value:0.9638515887233756\n",
+      "\n",
+      "VC dosage: 0.5\n",
+      "OJ dosage: 0.5\n",
+      "p-value:0.00635860676409683\n",
+      "\n",
+      "VC dosage: 0.5\n",
+      "OJ dosage: 1.0\n",
+      "p-value:3.655206715080794e-08\n",
+      "\n",
+      "VC dosage: 0.5\n",
+      "OJ dosage: 2.0\n",
+      "p-value:1.362154833373097e-11\n",
+      "\n",
+      "VC dosage: 1.0\n",
+      "OJ dosage: 0.5\n",
+      "p-value:0.04601033257637566\n",
+      "\n",
+      "VC dosage: 1.0\n",
+      "OJ dosage: 1.0\n",
+      "p-value:0.0010383758723000458\n",
+      "\n",
+      "VC dosage: 1.0\n",
+      "OJ dosage: 2.0\n",
+      "p-value:2.3610742005963914e-07\n",
+      "\n",
+      "VC dosage: 2.0\n",
+      "OJ dosage: 0.5\n",
+      "p-value:7.196253523966689e-06\n",
+      "\n",
+      "VC dosage: 2.0\n",
+      "OJ dosage: 1.0\n",
+      "p-value:0.09652612338267019\n",
+      "\n",
+      "VC dosage: 2.0\n",
+      "OJ dosage: 2.0\n",
+      "p-value:0.9638515887233756\n",
+      "\n",
+      "VC dosage: 0.5\n",
+      "VC dosage: 1.0\n",
+      "p-value:6.811017703167721e-07\n",
+      "\n",
+      "VC dosage: 0.5\n",
+      "VC dosage: 2.0\n",
+      "p-value:4.681577414622495e-08\n",
+      "\n",
+      "VC dosage: 1.0\n",
+      "VC dosage: 0.5\n",
+      "p-value:6.811017703167721e-07\n",
+      "\n",
+      "VC dosage: 1.0\n",
+      "VC dosage: 2.0\n",
+      "p-value:9.155603056654193e-05\n",
+      "\n",
+      "VC dosage: 2.0\n",
+      "VC dosage: 0.5\n",
+      "p-value:4.681577414622495e-08\n",
+      "\n",
+      "VC dosage: 2.0\n",
+      "VC dosage: 1.0\n",
+      "p-value:9.155603056654193e-05\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "#Reuse your t-test code above to calculate the p-value for a 2-sided $t$-test\n",
+    "#Reuse your t-test code above to calculate the p-value for a 2-sided t-test\n",
     "#for all combinations of the supplement-dose groups listed above. \n",
     "#(Since there isn't a control group, compare each group to every other group.)\n",
-    "for n in [0.5, 1.0, 2.0]:\n",
-    "    for m in [0.5, 1.0, 2.0]:\n",
-    "        print(f'OJ dosage: {n}\\nVC dosage: {m}\\np-value:',\n",
-    "              p_value(df_oj.loc[df_oj['dose'] == n].len,df_vc.loc[df_vc['dose'] == m].len,two_sided=True),\n",
-    "              '\\n')"
+    "\n",
+    "for drug1 in ['OJ','VC']:\n",
+    "    for drug2 in ['OJ', 'VC']:\n",
+    "        for n in [0.5, 1.0, 2.0]:\n",
+    "            for m in [0.5, 1.0, 2.0]:\n",
+    "                if drug1 == drug2 and n == m:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    sample1 = df.loc[(df['dose'] == n) & (df['supp'] == drug1)].len\n",
+    "                    sample2 = df.loc[(df['dose'] == m) & (df['supp'] == drug2)].len\n",
+    "                    p = p_value(sample1, sample2, two_sided=True)\n",
+    "                    print(f'{drug1} dosage: {n}\\n{drug2} dosage: {m}\\np-value:{p}\\n')"
    ]
   },
   {
