lab finished...and polished

--- a/index.ipynb
+++ b/index.ipynb
@@ -1018,7 +1018,11 @@
       "(('OJ', 1.0), ('VC', 1.0)) 4.203335666597141e-05\n",
       "(('OJ', 1.0), ('VC', 2.0)) 0.02710575576515617\n",
       "(('OJ', 2.0), ('VC', 0.5)) 0.0\n",
-      "(('OJ', 2.0), ('VC', 1.0)) 9.481304630298837e-14\n"
+      "(('OJ', 2.0), ('VC', 1.0)) 9.481304630298837e-14\n",
+      "(('OJ', 2.0), ('VC', 2.0)) 0.9477213632803463\n",
+      "(('VC', 0.5), ('VC', 1.0)) 1.7352785874891197e-12\n",
+      "(('VC', 0.5), ('VC', 2.0)) 0.0\n",
+      "(('VC', 1.0), ('VC', 2.0)) 5.418798743050957e-10\n"
      ]
     },
     {
@@ -1033,16 +1037,6 @@
       "  return (self.a < x) & (x < self.b)\n",
       "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\scipy\\stats\\_distn_infrastructure.py:1738: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  cond2 = (x >= self.b) & cond0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(('OJ', 2.0), ('VC', 2.0)) 0.9477213632803463\n",
-      "(('VC', 0.5), ('VC', 1.0)) 1.7352785874891197e-12\n",
-      "(('VC', 0.5), ('VC', 2.0)) 0.0\n",
-      "(('VC', 1.0), ('VC', 2.0)) 5.418798743050957e-10\n"
      ]
     }
    ],
@@ -1068,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1136,42 +1130,6 @@
       "p-value:0.9638515887233756\n",
       "\n",
       "VC dosage: 0.5\n",
-      "OJ dosage: 0.5\n",
-      "p-value:0.00635860676409683\n",
-      "\n",
-      "VC dosage: 0.5\n",
-      "OJ dosage: 1.0\n",
-      "p-value:3.655206715080794e-08\n",
-      "\n",
-      "VC dosage: 0.5\n",
-      "OJ dosage: 2.0\n",
-      "p-value:1.362154833373097e-11\n",
-      "\n",
-      "VC dosage: 1.0\n",
-      "OJ dosage: 0.5\n",
-      "p-value:0.04601033257637566\n",
-      "\n",
-      "VC dosage: 1.0\n",
-      "OJ dosage: 1.0\n",
-      "p-value:0.0010383758723000458\n",
-      "\n",
-      "VC dosage: 1.0\n",
-      "OJ dosage: 2.0\n",
-      "p-value:2.3610742005963914e-07\n",
-      "\n",
-      "VC dosage: 2.0\n",
-      "OJ dosage: 0.5\n",
-      "p-value:7.196253523966689e-06\n",
-      "\n",
-      "VC dosage: 2.0\n",
-      "OJ dosage: 1.0\n",
-      "p-value:0.09652612338267019\n",
-      "\n",
-      "VC dosage: 2.0\n",
-      "OJ dosage: 2.0\n",
-      "p-value:0.9638515887233756\n",
-      "\n",
-      "VC dosage: 0.5\n",
       "VC dosage: 1.0\n",
       "p-value:6.811017703167721e-07\n",
       "\n",
@@ -1208,6 +1166,8 @@
     "        for n in [0.5, 1.0, 2.0]:\n",
     "            for m in [0.5, 1.0, 2.0]:\n",
     "                if drug1 == drug2 and n == m:\n",
+    "                    continue\n",
+    "                elif drug1 == 'VC' and drug2 == 'OJ':\n",
     "                    continue\n",
     "                else:\n",
     "                    sample1 = df.loc[(df['dose'] == n) & (df['supp'] == drug1)].len\n",
